# kinesis-autoscaler

./: .gitignore  README.md  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg
.github/workflows/: ci.yml
examples/: stream_subscription.yml
kinesis_autoscaler/: constants.py  kinesis_autoscaler.py  kinesis_downscaler.py  kinesis_upscaler.py
kinesis_autoscaler/models/: autoscaler_log.py
tests/: conftest.py  test_kinesis_downscaler.py  test_kinesis_upscaler.py  utils.py
tests/aws_client_mockers/: cw_client_mocker.py  kinesis_client_mocker.py
